Log forwarded 4xx errors (#46)
